[gd_scene load_steps=3 format=3 uid="uid://djtg57vv8uep7"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_600g6"]
[ext_resource type="AudioStream" uid="uid://co6dknix8632l" path="res://assets/audio/music/Menu.ogg" id="2_v2woq"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_600g6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.5
offset_top = -113.5
offset_right = 238.5
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Main_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="ConfigButton" type="Button" parent="Main_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Configuration"

[node name="QuitButton" type="Button" parent="Main_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit
"

[node name="Config_container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -64.0
offset_right = 129.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fullscreen_check" type="CheckBox" parent="Config_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Full screen"

[node name="ApplyButton" type="Button" parent="Config_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Apply"

[node name="ReturnButton" type="Button" parent="Config_container"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="BG_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v2woq")
volume_db = -10.0

[connection signal="pressed" from="Main_container/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Main_container/ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="Main_container/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Config_container/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="Config_container/ReturnButton" to="." method="_on_return_button_pressed"]
